--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
+    "framer-motion": "^12.23.24",
     "js-yaml": "^4.1.0",
+    "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
