--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "@types/js-yaml": "^4.0.9",
     "framer-motion": "^12.23.24",
     "js-yaml": "^4.1.0",
