--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
+    "@types/d3": "^7.4.3",
     "@types/js-yaml": "^4.0.9",
+    "@types/three": "^0.180.0",
+    "d3": "^7.9.0",
     "framer-motion": "^12.23.24",
     "js-yaml": "^4.1.0",
     "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.3.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
